# DonkieTown_EIR_2023

./: .gitignore  autominy_config.bash  config.bash  generate_password.ipynb  install.sh  preinstall.sh  update.sh
.exercises/joystick_controller_py/src/: joystick_node.py
.exercises/solucion_asinus_car_cpp/: CMakeLists.txt
.jupyter/: README.md  jupyter_notebook_config.py  mycert.pem  mykey.key
.packages/solucion_asinus_car_cpp/: package.xml
.packages/solucion_asinus_car_cpp/src/: asinus_car_cpp_node.cpp
.packages/solucion_asinus_car_py/src/: asinus_car_python_node.py
.packages/solucion_autominy_cpp/src/: autominy_cpp_node.cpp
.packages/solucion_autominy_py/src/: autominy_python_node.py
.ubuntu_iso/: full_install.sh  install_donkietown.sh  install_libraries.sh  install_ros.sh  install_vsc.sh  set_background.sh  set_vsc_extensions.sh  vsc_extensions.sh
catkin_ws/src/cooperative_driving/: CMakeLists.txt  package.xml
catkin_ws/src/cooperative_driving/launch/: cooperative_convoy.launch
catkin_ws/src/cooperative_driving/scripts/: path_dist.py
catkin_ws/src/cooperative_driving/src/: auto_model.py  cooperative_convoy_node.py  cooperative_driving_node.py  fub_controller.py  v2x.py
catkin_ws/src/donkietown_msgs/: CMakeLists.txt  package.xml
catkin_ws/src/donkietown_msgs/msg/: CooperativeAwarenessMessage.msg  MarkerEdge.msg  MarkerEdgeArray.msg  MotorsSpeed.msg  MotorsState.msg  Square.msg
catkin_ws/src/donkietown_msgs/src/: lat_test.py
catkin_ws/src/fub_navigation_asinus_car/: CMakeLists.txt  package.xml
catkin_ws/src/fub_navigation_asinus_car/launch/: navigation.launch
catkin_ws/src/fub_navigation_asinus_car/scripts/: maps_info.py  path_parser.py
catkin_ws/src/fub_navigation_asinus_car/scripts/maps/cimat_reduced/: matrix-30cm_lane1.npy  matrix-30cm_lane2.npy  matrix0cm_lane1.npy  matrix0cm_lane2.npy  matrix30cm_lane1.npy  matrix30cm_lane2.npy
catkin_ws/src/fub_navigation_asinus_car/src/: auto_model.py  auto_model_odom.py  control.py  v2x.py
catkin_ws/src/fub_navigation_autominy/: CMakeLists.txt  package.xml
catkin_ws/src/fub_navigation_autominy/src/: control.py  matrix-50cm_lane1.npy  matrix-50cm_lane2.npy  matrix0cm_lane2.npy  matrix50cm_lane1.npy  matrix50cm_lane2.npy  new_map_loop1.txt  new_map_loop2.txt
catkin_ws/src/fub_navigation_autominy/src/altMatrices/: matrix50cm_lane1.npy  matrix50cm_lane2.npy
catkin_ws/src/hola_ros/: CMakeLists.txt  package.xml
catkin_ws/src/hola_ros/src/: hola.cpp  publicador.cpp  subscriptor.cpp
catkin_ws/src/joystick_controller_py/: CMakeLists.txt  package.xml
catkin_ws/src/node_template/: CMakeLists.txt  package.xml
catkin_ws/src/node_template/src/: cpp_listener_node.cpp  cpp_talker_node.cpp  python_listener_node.py  python_talker_node.py
catkin_ws/src/solucion_autominy_cpp/src/: autominy_cpp_node.cpp
catkin_ws/src/solucion_autominy_py/: CMakeLists.txt  package.xml
catkin_ws/src/solucion_autominy_py/src/: autominy_python_node.py
config/: asinus_car_config.bash  autominy_config.zsh  client_config.bash
config/asinus_car/: asinus_car_config.bash  config.bash  launch_jupyter_asinus.bash
config/autominy/: autominy_config.zsh  config.zsh  launch_jupyter_autominy.zsh
docs/: README.md  install.md  ros_intro.md
docs/software/: README.md  ainus_cars.md  asinus_cars.md  base_station.md
exercises/joystick_controller_py/src/: joystick_node.py
exercises/solucion_asinus_car_cpp/src/: asinus_car_cpp_node.cpp
exercises/solucion_asinus_car_py/src/: asinus_car_python_node.py
exercises/solucion_autominy_cpp/src/: autominy_cpp_node.cpp
notebooks/: nuevo_catkinws.ipynb
ubuntu_iso/: install.sh  install_vsc.sh  vcs_extensions.sh  vsc_extensions.sh
